[package]
name = "cargo-mtime-memoize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "1.0.0"
filetime = "0.2.23"
futures = "0.3.30"
rusqlite = { version = "0.30.0", features = ["bundled"] }
sha256 = "1.5.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "io-std", "io-util", "sync", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true
