[package]
name = "cargo-mtime-memoize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "1.0.0"
filetime = "0.2.23"
futures = "0.3.30"
jammdb = "0.11.0"
sha256 = "1.5.0"
speedy = "0.8.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "io-std", "io-util", "sync", "macros", "signal"] }

[profile.release]
debug = true
